--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="main-container">
         <div class="app-header">
-            <h1 class="header"><i class="fas fa-microphone-alt pulse-icon"></i> REJESTRATOR DŹWIĘKU</h1>
+            <h1 class="header"><i class="fas fa-microphone-alt pulse-icon"></i> BUZZY</h1>
             <div class="tagline">Twórz, nagrywaj, udostępniaj</div>
         </div>
         
@@ -35,7 +35,6 @@
                     <li>Aplikacja <strong>automatycznie zapisze</strong> i <strong>wyśle</strong> nagranie</li>
                 </ol>
                 <div class="app-features">
-                    <div class="feature"><i class="fas fa-wifi"></i> Działa offline</div>
                     <div class="feature"><i class="fas fa-cloud-upload-alt"></i> Automatyczny upload</div>
                     <div class="feature"><i class="fas fa-mobile-alt"></i> Dostosowana do urządzeń mobilnych</div>
                 </div>
@@ -44,7 +43,7 @@
 
         <div class="card main-card">
             <div class="status-box">
-                <span id="recording-icon" class="glow-effect">⚪</span>
+                <span id="recording-icon" class="recording-icon-ready">⚪</span>
                 <span id="status-label">Gotowy do nagrywania</span>
             </div>
             
