--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <div class="main-container">
         <div class="app-header">
-            <h1 class="header"><i class="fas fa-microphone-alt pulse-icon"></i> BUZZY</h1>
-            <div class="tagline">Twórz, nagrywaj, udostępniaj</div>
+            <h1 class="header"><i class="fas fa-regular fa-bee pulse-icon"></i> BUZZY</h1>
+            <div class="tagline">Nagrywaj, twórz i słuchaj</div>
         </div>
         
         <div class="card info-card">
@@ -36,6 +36,7 @@
                 </ol>
                 <div class="app-features">
                     <div class="feature"><i class="fas fa-cloud-upload-alt"></i> Automatyczny upload</div>
+                    <div class="feature"><i class="fas fa-spotify"></i> Generowanie playlisty Spotify</div>
                     <div class="feature"><i class="fas fa-mobile-alt"></i> Dostosowana do urządzeń mobilnych</div>
                 </div>
             </div>
