--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="main-container">
         <div class="app-header">
-            <h1 class="header"><i class="fas fa-regular fa-bee pulse-icon"></i> BUZZY</h1>
+            <h1 class="header"><i class=" 🐝 pulse-icon"></i> BUZZY</h1>
             <div class="tagline">Nagrywaj, twórz i słuchaj</div>
         </div>
         
@@ -33,10 +33,10 @@
                     <li><strong>Mów</strong> do mikrofonu - poziom dźwięku zobaczysz na wskaźniku</li>
                     <li><strong>Zatrzymaj</strong> nagrywanie tym samym przyciskiem</li>
                     <li>Aplikacja <strong>automatycznie zapisze</strong> i <strong>wyśle</strong> nagranie</li>
+                    <li>Playlista zostanie utworzona na <strong>koncie spotify</strong></li>
                 </ol>
                 <div class="app-features">
                     <div class="feature"><i class="fas fa-cloud-upload-alt"></i> Automatyczny upload</div>
-                    <div class="feature"><i class="fas fa-spotify"></i> Generowanie playlisty Spotify</div>
                     <div class="feature"><i class="fas fa-mobile-alt"></i> Dostosowana do urządzeń mobilnych</div>
                 </div>
             </div>
