--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <div class="main-container">
         <div class="app-header">
-            <h1 class="header"><i class=" 🐝 pulse-icon"></i> BUZZY</h1>
+            <h1>🐝</h1>
+            <h1 class="header"><i class="fas fa-microphone-alt pulse-icon"></i> BUZZY</h1>
             <div class="tagline">Nagrywaj, twórz i słuchaj</div>
         </div>
         
