--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <div id="last-recording-info" class="recording-history"></div>
         </div>
 
+        <!-- Umieść to w miejscu, gdzie chcesz wyświetlić status logowania Spotify -->
         <div id="spotify-status-container"></div>
         
         <div class="made-with">
